styled edit page, welcome sign fixed, search bar in progress

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,10 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.text_field :email, placeholder: "Enter a Valid Email" %>
   </div>
-  <div class="field">
+
+  
+  <div class="hidden-field">
     <%= f.label :user_id %><br>
     <%= f.number_field :user_id %>
   </div>
