--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,11 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to "Home", index_path, class: "navbar-brand" %>
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Sign Up", new_registration_path(resource_name), class: "active" %><span class="sr-only">(current)</span></li>
+      </ul>
+       <%= text_field_tag :search, params[:search] %>
+        <%= submit_tag "Search", :name => nil %>
     </div>
 
 
@@ -26,9 +31,9 @@
     <% if user_signed_in? %>
     <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Welcome *username*<span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= "Welcome #{current_user.email}" %><span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">View Profile</a></li>
+            <li><%= link_to "View Profile", show_user_path(id: @current_user_id) %></a></li>
             <li><%= link_to "Edit Profile", edit_user_registration_path%></li>
             <li><a href="#">View My Posts</a></li>
             
