--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,11 +18,19 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to "Home", index_path, class: "navbar-brand" %>
-      <ul class="nav navbar-nav">
-        <li><%= link_to "Sign Up", new_registration_path(resource_name), class: "active" %><span class="sr-only">(current)</span></li>
-      </ul>
-       <%= text_field_tag :search, params[:search] %>
-        <%= submit_tag "Search", :name => nil %>
+    <ul class="nav navbar-nav pita">
+    <div class = "row">
+      <div class="input-group">
+        <%= text_field_tag :search, params[:search], placeholder: "Search", class: "form-control" %>
+        
+        <span class="input-group-btn">
+          <%= submit_tag "Go!", class: "btn btn-default" %>
+       </span>
+      </div>          
+    </div>
+  </ul>
+      <%#= render :partial => 'post/search' %>
+
     </div>
 
 
@@ -57,6 +65,7 @@
       <%#= f.check_box :remember_me %>
       <%#= f.label :remember_me %>
     </div>  --> 
+    <%= link_to "Sign Up", new_registration_path(resource_name), class: "active" %><span class="sr-only">(current)</span>
   <% end %>
 
 </ul> 
