--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<h1>Current Posts</h1>
+<%= link_to "New Post", new_post_path, class: "btn btn-info" %>
+
+<% @posts.each do |post| %>
+
+<div class = "well">
+	<h3><%= link_to post.title %></h3>
+	<p><strong>Posted by <%= post.author_id %></p>
+</div>
+<% end %>
