--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Home", index_path, class: "navbar-brand" %>
+      <%= link_to "Home", root_path, class: "navbar-brand" %>
     <ul class="nav navbar-nav pita">
     <div class = "row">
       <div class="input-group">
