--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -24,6 +24,6 @@
     <%= f.text_area :content %>
   </div>
   <div class="actions">
-    <%= f.submit redirect_to :back %>
+    <%= f.submit %>
   </div>
 <% end %>
